
2017-03-22  Brian Tiffin <btiffin@gnu.org>

	* intrinsic.c: add SCRIPT-RETURN-CODE to cob_embed_vrexx

2017-03-20  Brian Tiffin <btiffin@gnu.org>

	* intrinsic.c: Refactor rexx vararg handling into cob_embed_vrexx

2017-03-19  Brian Tiffin <btiffin@gnu.org>

	* intrinsic.c, common.h: cob_embed_rexx_safe renamed to cob_embed_rexx_restricted

2017-03-17  Brian Tiffin <btiffin@gnu.org>

	* intrinsic.c, common.h: adding cob_embed_rexx_safe

2017-03-08  Brian Tiffin <btiffin@gnu.org>

	* intrinsic.c, common.h: adding cob_embed_rexx

2017-02-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c: [!COB_GEN_SCREENIO] fixed zero_line_col_allowed
	  missing / superfluous in function declarations

2017-02-06  Ron Norman <rjn@inglenet.com>

	* common.c, common.h:
	  added cob_module_free so that structure gets freed within libcob
	* fileio.c, common.h:
	  Added new routines cob_file_external_addr,cob_file_malloc,cob_file_free
	  so that 'cob_file' is allocated within libcob
	  This will allow the stucture have fields added to the end
	  without forcing a recompile.

2017-02-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, call.c: [__MINGW32__] fixes for mixed printf
	  format modifiers for long long
	* common.c: [WIN32] check if PROCESS_QUERY_LIMITED_INFORMATION is
	  actually defined (not the case for MINGW and old VC versions)

2017-01-18  Ron Norman <rjn@inglenet.com>

	* call.c (cob_get_param_type): added check for COB_FIELD_REAL_BINARY

2017-01-17  Ron Norman <rjn@inglenet.com>

	* call.c: added code to handle default data field types by using cob_move
	* move.c: added missing cob_put_s64_compx routine

2017-01-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: Copyright year 2017

2017-01-10  Ron Norman <rjn@inglenet.com>

	* move.c, call.c, common.h: New routines added to provide
	  application C code access to COBOL data fields.
