@@ -1,6 +1,7 @@
 
 2017-03-22  Brian Tiffin <btiffin@gnu.org>
 
+	* exception.def: add EC-IMP-SCRIPT exception
 	* intrinsic.c: add SCRIPT-RETURN-CODE to cob_embed_vrexx
 
 2017-03-20  Brian Tiffin <btiffin@gnu.org>
